# cdk-axum-lambda-example-2024

./: biome.json  package.json  pnpm-lock.yaml
layers/lambda-web-adapter/: Dockerfile  aarch64.Dockerfile  x86_64.Dockerfile
lib/: cdk-app-stack.ts  lambda-http-aarch64-substack.ts  lambda-http-amd64-substack.ts  lambda-web-adapter-aarch64-substack.ts  lambda-web-adapter-amd64-substack.ts
lib/constructs/: api-system-using-lambda-http.ts  api-system-using-lambda-webadapter-layer.ts  api-sytem-with-layer.ts  api-sytem-without-layer.ts
rust-workspace/: Cargo.toml
rust-workspace/axum-api/: Cargo.toml
rust-workspace/axum-api/src/: main.rs
rust-workspace/axum-app-core/: Cargo.toml
rust-workspace/axum-app-core/src/: handlers.rs  lib.rs
rust-workspace/axum-app-core/src/handlers/: greet.rs  reqwest_example.rs
rust-workspace/axum-lambda-http/: Cargo.toml
rust-workspace/axum-lambda-http/src/: main.rs
rust-workspace/axum-server/: Cargo.toml
rust-workspace/axum-server/src/: main.rs
test/: snapshot.test.ts
test/__snapshots__/: snapshot.test.ts.snap
test/plugins/: ignore-asset-hash.ts
