[workspace]

members = [
    "axum-app-core", "axum-lambda-http",
    "axum-server",
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
