[package]
name = "axum-lambda-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.11.1"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum-app-core = { path = "../axum-app-core" }
